# vcd2pwl

./: .coverage  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: python-package.yml
tests/: tests.py
tests/fixtures/: test.pwl  test.vcd
vcd2pwl/: __init__.py
vcd2pwl/converter/: __init__.py  converter.py
vcd2pwl/parser/: parser.py
vcd2pwl/pattern_finders/: pattern_finders.py
vcd2pwl/pwl_creator/: pwl_creator.py
vcd2pwl/scripts/: __init__.py  vcd2pwl.py
