[tool.poetry]
name = "LyuPo7_vcd2pwl"
version = "0.1.0"
description = "Utility for convert .vcd files to .pwl files"
authors = ["LyuPo <lport@frtk.ru>"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/LyuPo7/vcd2pwl"
packages = [
  { include = "vcd2pwl" },
]
[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
vcd2pwl = "vcd2pwl.scripts.vcd2pwl:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
